--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template2",
+  "name": "template",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,12 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.31",
-    "@types/react-dom": "18.0.11",
+    "@chakra-ui/icons": "^2.0.18",
+    "@chakra-ui/react": "^2.5.5",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@prisma/client": "^4.12.0",
+    "dayjs": "^1.11.7",
+    "framer-motion": "^10.10.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.3"
+    "react-input-mask": "3.0.0-alpha.2",
+    "recoil": "^0.7.7",
+    "recoil-persist": "^4.2.0",
+    "swr": "^2.1.1",
+    "underscore": "^1.13.6"
+  },
+  "devDependencies": {
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.31",
+    "prisma": "^4.12.0",
+    "typescript": "4.9.3"
   }
 }
